--- a/css/global.css
+++ b/css/global.css
@@ -99,6 +99,8 @@ button:active {
 
 .container {
   max-width: 1320px;
+  width: 100%;
+  overflow-x: hidden;
   margin: 0 auto;
   padding: 0 15px;
   
