--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100vh;
+  height: calc(100vh - 73px) ;
   padding: 24px 15px;
   background-color: var(--white);
   color: var(--grey1);
